--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://megafry.github.io/ScherreSteinPapier.github.io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://megafry.github.io/ScherreSteinPapier.github.io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://megafry.github.io/ScherreSteinPapier.github.io/favicon-16x16.png">
+    <link rel="manifest" href="https://megafry.github.io/ScherreSteinPapier.github.io/manifest.json">
     <meta name="theme-color" content="#ffffff">
     <meta name="description" content="Memeory">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
