--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Scherre Stein Papier</title>
     <meta charset="utf-8" />
     <meta name="apple-mobile-web-app-title" content="Scherre Stein Papier">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -92,6 +93,7 @@
       width: 30px;
       height: 30px;
       line-height: 30px;
+      cursor: pointer;
 
     }
 
