--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="apple-mobile-web-app-title" content="Scherre Stein Papier">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" sizes="180x180" href="https://megafry.github.io/ScherreSteinPapier.github.io/apple-touch-icon.png">
