added css prefix

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Scherre Stein Papier</title>
     <meta charset="utf-8" />
-    <meta name="apple-mobile-web-app-title" content="Scherre Stein Papier">
+    <meta name="apple-mobile-web-app-title" content="Scherre S. P.">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -80,7 +80,8 @@
       padding: 15px;
       width: 80%;
       left: 50%;
-      transform: translate(-50%, 50%);
+      -webkit-transform: translate(-50%, 50%);
+              transform: translate(-50%, 50%);
       box-shadow: -1px 2px 6px 6px rgba(0, 0, 0, 0.10196078431372549);
 
     }
